--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "Scrim-s06imut",
-  "description": "https://scrimba.com/claude-ai-c09gsmkso3/~02xb",
+  "name": "the-describer",
+  "version": "1.0.0",
+  "description": "AI-powered image description tool for accessibility",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "0.24.3",
-    "vite": "latest"
+    "@anthropic-ai/sdk": "^0.24.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "vite": "^5.0.0"
+  },
+  "type": "module"
 }
