--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "preview": "vite preview",
     "start": "vite"
   },
-  "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "vite": "^5.0.0"
   },
